9/16/2011 Added ColorScheme to arrow button node
9/16/2011 ArrowButtonNode minor formatting changes
9/14/2011 Copied ArrowButtonNode to piccolo-phet from molecule-shapes, added border to show up against white background and made default button for kits
9/11/2011 Fixed exception caused by small arrows in VelocitySensorNode
9/8/2011 Added FaucetNode flag to indicate whether the user has to hold down the knob to maintain a flow rate
9/8/2011 Made kit selection buttons look more button-like, resolves #3064
9/7/2011 Reverted changes to CursorHandler, resolves #3061
9/6/2011 Factored out RelativeDragHandler.setModelPosition to improve support for fluid-pressure-and-flow
9/5/2011 Added support for changing the cursor in CursorHandler, see #3061
9/1/2011 Made RulerNode.createTickMark non-static and protected for sim-specific overrides, resolves #3052
8/31/2011 Moved sugar-and-salt-solutions faucet to piccolo-phet
8/9/2011 Improved support for title in KitSelectionNode
8/9/2011 Fixes for ZeroOffsetNode and added Kit titles in KitSelectionNode
8/8/2011 Renamed StandardizedNode to ZeroOffsetNode
8/8/2011 Moved kit implementations to piccolo-phet
8/4/2011 Only show the "clear" button if the client requested it
8/2/2011 Renamed parameter and added docs to FloatingClockControlNode
7/22/11 Generalized BoxLayout and subclasses to use double instead of int for spacing
7/19/11 Generalized ComboBoxNode so the client code can specify an arbitrary initial selection, instead of just using the 0th item, resolves #3014
7/19/11 Generalized ComboBoxNode so that it can show arbitrary nodes, resolves #3010
7/1/11 Fixed: highlighted cells are clipped on 2 sides, see #2944
7/1/11 Removed the assumption that one item will be selected from PeriodicTableNoede, see #2994
7/1/11 Removed unused classes
7/1/11 Moved PeriodicTableNode from build-an-atom to piccolo-phet, see #2994
6/30/11 Refactored combo box to avoid errors in IntelliJ presentation compiler, see #2982