@@ -1,3 +1,4 @@
+9/16/2011 Added a constructor to KitSelectionNode that allows specification of the forward/back button colors
 9/16/2011 Added ColorScheme to arrow button node
 9/16/2011 ArrowButtonNode minor formatting changes
 9/14/2011 Copied ArrowButtonNode to piccolo-phet from molecule-shapes, added border to show up against white background and made default button for kits
